<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- LinearLayout was chosen because what needed to be achieved could be done by aligning all of
    the views vertically, meaning there was no need for a more complex constraint layout -->
    <LinearLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.InstructionFragment">

        <TextView
            android:id="@+id/titleText"
            android:text="@string/instruction_title_text"
            android:layout_marginTop="@dimen/largeMargin"
            style="@style/linearLayoutTitleStyle" />

        <TextView
            android:id="@+id/instructionText"
            android:text="@string/instruction_text"
            style="@style/linearLayoutTextStyle" />

        <Button
            android:id="@+id/viewBlocksButton"
            android:text="@string/view_block_list"
            style="@style/linearLayoutButtonStyle" />
    </LinearLayout>

</layout>