<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.blockstore.screens.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.blockstore.screens.WelcomeFragment"
        android:label="@string/actions_button"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.blockstore.screens.InstructionFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.udacity.blockstore.screens.ListFragment"
        android:label="@string/actions_button"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listingFragment_to_detailCreateFragment"
            app:destination="@id/detailCreateFragment"
            app:popUpTo="@id/listingFragment" />
        <action
            android:id="@+id/action_listingFragment_to_detailReadFragment"
            app:destination="@id/detailReadFragment"
            app:popUpTo="@id/listingFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_listingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailCreateFragment"
        android:name="com.udacity.blockstore.screens.DetailCreateFragment"
        android:label="@string/create_block">
        <action
            android:id="@+id/action_detailCreateFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/listingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailReadFragment"
        android:name="com.udacity.blockstore.screens.DetailReadFragment"
        android:label="@string/block_detail">
        <argument
            android:name="position"
            app:argType="integer" />
        <action
            android:id="@+id/action_detailReadFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/listingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>